# JP4Agent

./: .clang-format  .gitignore  .travis.yml  EULA.docx  LICENSE  Makefile  README.md
AFI/: Makefile  README.md  afi-cap-action.yang  afi-cap-entry-action.yang  afi-cap-entry-match.yang  afi-cap-entry.yang  afi-cap-match.yang  afi-cap.yang  afi-common.yang  afi-cos-classifier.yang  afi-counter.yang  afi-decap.yang  afi-discard.yang  afi-encap-entry.yang  afi-encap.yang  afi-filter.yang  afi-fwd-sandbox.yang  afi-indexed-list.yang  afi-indirect.yang  afi-list.yang  afi-match.yang  afi-oam.yang  afi-policer.yang  afi-port.yang  afi-receive.yang  afi-replicate.yang  afi-sample.yang  afi-sandbox.yang  afi-selector.yang  afi-switch.yang  afi-table.yang  afi-tree-encap-entry.yang  afi-tree-encap.yang  afi-tree-entry.yang  afi-tree.yang  afi-types.yang  afi.yang
AFI/test/afi-controller/: .depend  Makefile  afi-controller  base64.cpp  base64.h  main.cpp
cli/: build.sh  cli.py  handle_cmd.cpp  handle_cmd.h  jp4cli_pb2.py  jp4cli_pb2_grpc.py
config/: afi-switch-cfg.json  aft-target-halp-cfg.json  jp4agent-brcm-cfg.json  jp4agent-cfg.json
docs/: CodingGuidelines.md  Jaeger.md  README.md  WorkingWithVMX.md
docs/p4/: README.md
docs/resources/: README.md
lib/afi/: libworkqueue.so.0
p4c-backend/: README.md  p4c.afi.cfg
p4c-backend/afi/: CMakeLists.txt  JsonObjects.cpp  JsonObjects.h  README.md  action.cpp  action.h  afi.cpp  afiSwitch.cpp  afiSwitch.h  analyzer.cpp  analyzer.h  backend.cpp  backend.h  base64.cpp  base64.h  control.cpp  control.h  deparser.cpp  deparser.h  errorcode.cpp  errorcode.h  expression.cpp  expression.h  extern.cpp  extern.h  extractArchInfo.cpp  extractArchInfo.h  header.cpp  header.h  helpers.cpp  helpers.h  lower.cpp  lower.h  metermap.cpp  metermap.h  midend.cpp  midend.h  options.h  parser.cpp  parser.h  (+4 more)
protos/: .gitignore
src/: .gitignore  AfiClient.cpp  AfiClient.h  AfiDM.h  AfiObjects.cpp  AfiObjects.h  AftPacket.cpp  AftPacket.h  Base.h  JP4Agent.cpp  JP4Agent.h  Log.h  Main.cpp  Makefile  P4Info.cpp  P4Info.h  README.md  Utils.cpp  Utils.h  base64.cpp  config.yaml  gdb-jp4agent  run-jp4agent
src/afi/include/: Afi.h  AfiCap.h  AfiCapAction.h  AfiCapEntry.h  AfiCapEntryAction.h  AfiCapEntryMatch.h  AfiCapMatch.h  AfiCreator.h  AfiDM.h  AfiDevice.h  AfiEncap.h  AfiEncapEntry.h  AfiNext.h  (+7 more)
test/controller/: .gitignore  Controller.cpp  Controller.h  Main.cpp  Makefile  Utils.cpp
test/gtest/: .gitignore  GTest.cpp  Makefile  README  README.md  TapIf.h  TestPacket.cpp  TestPacket.h  TestUtils.cpp  TestUtils.h  run-gtests
test/scripts/: nullTest.sh  udp_server.py
tools/: .gitignore  README.md
tools/config/: cron.cfg  regression-cfg.xml  vmx-cfg.xml
tools/docker/: Dockerfile_p4  Dockerfile_p4_vmx  entrypoint.sh
tools/report/: .gitignore  gtest-not-run.xml  gtest-result.dtd  gtest-result.xsl  index.html  regression.xsl
tools/scripts/: bridge_cleanup.sh  build_push_docker.sh  clang-format.sh  cmn.sh  cpplint.py  cpplint.sh  delete_old_reports.sh  docker_run_gtests.exp  docker_setup_vmx.exp  generate_final_report.sh  http_server.py  install_packages.sh  lib.exp  package-vmx.sh  regression.sh  run-regression  schedule_cron_job.sh  setup-vmx  start-http-server
(+241 files in other folders)
